[package]
name = "roll"
version = "0.1.0"
authors = ["deciduously <github@deciduously.com>"]

[[bin]]
name = "roll"
path = "src/main.rs"

[dependencies]

actix = "0.5"
actix-web = "0.6"
diesel = { version = "*", features = ["sqlite"] }
dotenv = "*"
dotenv_codegen = "*"
lazy_static = "*"
r2d2 = "*"
r2d2-diesel = "*"
rand = "*"
regex = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
