[package]
name = "roll"
version = "0.1.0"
authors = ["deciduously <github@deciduously.com>"]

[[bin]]
name = "roll"
path = "src/main.rs"

[dependencies]

actix = "0.5"
actix-web = "0.6"
diesel = { version = "1.3", features = ["sqlite"] }
dotenv = "0.12"
dotenv_codegen = "*"
env_logger = "*"
lazy_static = "*"
r2d2 = "0.8"
r2d2-diesel = "1"
rand = "*"
regex = "*"
serde = "1"
serde_json = "1"
serde_derive = "1"
