[package]
name = "roll"
version = "0.1.0"
authors = ["deciduously <github@deciduously.com>"]

[[bin]]
name = "roll"
path = "src/main.rs"

[dependencies]

actix = "0.7"
actix-web = "0.7"
diesel = { version = "1.3", features = ["sqlite"] }
dotenv = "0.13"
dotenv_codegen = "0.11"
lazy_static = "1.2"
pretty_env_logger = "0.2"
r2d2 = "0.8"
r2d2-diesel = "1"
rand = "0.6"
regex = "1"
serde = "1"
serde_json = "1"
serde_derive = "1"
